# paddleinfo

./: CITATION.cff  README.md  paddle_utils.py  profiler.py  requirements.txt  ruff.toml  setup.cfg
paddleinfo/: __init__.py  enums.py  formatting.py  layer_info.py  model_statistics.py  paddleinfo.py
tests/: conftest.py  exceptions_test.py  gpu_test.py  half_precision_test.py  jupyter_test.ipynb  paddleinfo_test.py  paddleinfo_xl_test.py
tests/fixtures/: genotype.py  models.py  tmva_net.py
tests/test_output/: ascii_only.out  autoencoder.out  basic_summary.out  batch_size_optimization.out  compressai.out  device.out  eval_order_doesnt_matter.out  fasterrcnn.out  formatting_options.out  forward_pass_exception.out  frozen_layers.out  genotype.out  google.out  groups.out  input_tensor.out  model_with_args.out  module_dict.out  partial_jit.out  pruning.out  recursive_with_missing_layers.out  resnet152.out  resnet18_depth_consistency.out  resnet50.out  return_dict.out  row_settings.out  siamese_net.out  single_input.out  single_input_all_cols.out  single_input_batch_dim.out  single_input_half.out  single_parameter_model.out  string_result.out  tmva_net_column_totals.out  too_many_relus.out
