[metadata]
name = paddleinfo
version = attr: paddleinfo.__version__
description = Model summary in PyTorch, based off of the original paddlesummary.
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/tyleryep/torchinfo
author = Tyler Yep @tyleryep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = paddle paddlepaddle paddlesummary paddle-summary summary keras deep-learning ml paddleinfo paddle-info visualize model statistics layer stats

[options]
packages = paddleinfo
python_requires = >=3.8
include_package_data = True

[options.package_data]
paddleinfo = py.typed

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = ignore-without-code
